# tech-analyzer

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
tech_analyzer/: __main__.py  cli.py  log.py
tech_analyzer/alerts/: notifier.py
tech_analyzer/analysis/: backtest.py  sr_levels.py
tech_analyzer/charts/: plotter.py
tech_analyzer/data/: auth.py  historical.py  instruments.py  live.py
tech_analyzer/patterns/: detector.py
tech_analyzer/screener/: scanner.py  watchlists.py
tech_analyzer/trading/: engine.py  portfolio.py  report.py  session.py
tech_analyzer/web/: app.py  broadcaster.py  market.py  session_runner.py  state.py
tech_analyzer/web/routers/: auth_router.py  portfolio_router.py  session_router.py  ws_router.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: CandleChart.tsx  PortfolioSummary.tsx  SessionControls.tsx  SymbolTable.tsx  TradeFeed.tsx
web/src/ws/: eventTypes.ts  useWebSocket.ts
